# scratch

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/module/: add_custom_test.cmake  add_google_test.cmake  add_third_party.cmake  cmake_environ.cmake  cpp_restrict_qualifier.cmake  have_c_array_range_initializer.cmake  have_cpp_thread_local.cmake  test_environ.cmake
cmake/src/have_c_array_range_initializer/: test_have_c_array_range_initializer.c
cmake/src/have_cpp_thread_local/: test_have_cpp_thread_local.cpp
docs/: .gitignore  CMakeLists.txt  Doxyfile
include/: .gitignore
include/convert_base/: convert_base.h  get_max_digits.h
include/smallest_circle/: smallest_circle.h
src/: CMakeLists.txt
src/convert_base/: CMakeLists.txt  add.c  add.h  base_converter.cpp  base_map.c  convert_base.c  convert_base.h  generate_get_digit.c  get_digit.c  get_digit.h  get_max_digits.c  get_max_digits.h  multiply.c  multiply.h
src/convert_base/test/: CMakeLists.txt  test_add.cpp  test_convert_base.cpp  test_get_digit.cpp  test_get_max_digits.cpp  test_multiply.cpp
src/learn_opengl/: CMakeLists.txt
src/learn_opengl/hello_triangle/: CMakeLists.txt  hello_triangle.cpp
src/learn_opengl/hello_window/: CMakeLists.txt  hello_window.cpp
src/smallest_circle/: CMakeLists.txt  find_smallest_circle.c  parse_points.c  parse_points.h  smallest_circle.c
src/smallest_circle/test/: CMakeLists.txt  test_parse_points.cpp  test_smallest_circle.cpp
test/include/: make_array.hpp
test/src/: CMakeLists.txt
